Fix: overlapped create button and text

--- a/static/air_pollution/style.css
+++ b/static/air_pollution/style.css
@@ -101,7 +101,7 @@
 }
 #create{
     position: relative;
-    top: 125px;
+    top: 200px;
     left: 150px;
 }
 #return{
